[metadata]
name = compimg
author = JenioPY
author_email = jeniopy@gmail.com
version = 0.1.1
license_file = LICENSE
description = Image similarity metrics.
long_description_content_type = text/markdown
long_description = file: README.md
url = http://github.com/JenioPY/compimg
requires-python = >=3.6
classifier =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent


[options]
packages = compimg
install_requires =
    numpy>=1.15.4, <2.0.0