[metadata]
name = compimg
author = khrynczenko
author_email = jeniopy@gmail.com
version = 0.2.0
license_file = LICENSE
description = Image similarity metrics.
long_description_content_type = text/markdown
long_description = file: README.md
url = http://github.com/khrynczenko/compimg
requires-python = >=3.6
classifier =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent


[options]
packages = compimg
install_requires =
    scipy>=1.1.0, <2.0.0
    numpy>=1.15.4, <2.0.0
