[metadata]
name = compimg
author = khrynczenko
author_email = jeniopy@gmail.com
version = 0.2.2
license_file = LICENSE
description = Image quality assessment (IQA) methods.
long_description_content_type = text/markdown
long_description = file: README.md
url = http://github.com/khrynczenko/compimg
classifier =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering


[options]
packages = find:
python_requires = >=3.6
install_requires =
    scipy>=1.1.0, <2.0.0
    numpy>=1.15.4, <2.0.0


[options.packages.find]
exclude =
    compimg.tests
    compimg.benchmarks
    benchmarks
